# qa_pipeline

./: .gitattributes  .gitignore  .npmignore  .prettierignore  AGENTS.md  ASSIGNMENT_SUBMISSION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  lean-spec.code-workspace  opencode.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.json  render.yaml  server.js  tsconfig.json  turbo.json  vercel.json  vitest.config.ts
.claude/hooks/: session-start.sh
.claude/skills/: leanspec-dev-process  leanspec-pr-lifecycle  leanspec-pre-push
.github/workflows/: ci.yml  copilot-setup-steps.yml  (+2 more)
.husky/: pre-commit  pre-push
.lean-spec/: config.json
deploy/: README.md  fly.toml  render.yaml
docker/: .dockerignore  Dockerfile  README.md
docs/: cloud-sync-bridge.md
docs-site/: .gitignore  .npmrc  AGENTS.md  LICENSE  README.md  docusaurus.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sidebars.ts  tsconfig.json  vercel.json
hooks/: commit-msg
rust/: Cargo.toml  README.md  clippy.toml
rust/leanspec-cli/: Cargo.toml
rust/leanspec-cli/src/: cli_args.rs  main.rs
rust/leanspec-cli/src/commands/: analyze.rs  archive.rs  backfill.rs  board.rs  capabilities.rs  check.rs  children.rs  compact.rs  create.rs  deps.rs  examples.rs  files.rs  gantt.rs  git_repo.rs  init.rs  list.rs  migrate.rs  mod.rs  open.rs  package_manager.rs  rel.rs  schema.rs  search.rs  shared.rs  split.rs  stats.rs  templates.rs  timeline.rs  tokens.rs  ui.rs  update.rs  validate.rs  view.rs
rust/leanspec-cli/src/commands/crystallize/: generator.rs  mod.rs  signals.rs  writer.rs
rust/leanspec-cli/src/commands/crystallize/scanners/: arch.rs  git.rs  mod.rs  naming.rs  specs.rs  tests.rs
rust/leanspec-cli/src/commands/tui/: app.rs  board.rs  deps.rs  detail.rs  filter.rs  headless.rs  help.rs  keybindings.rs  list.rs  markdown.rs  mod.rs  project_switcher.rs  projects.rs  search.rs  theme.rs  toc.rs
rust/leanspec-cli/templates/: AGENTS-generic.md  AGENTS-with-skill.md  AGENTS.md
rust/leanspec-cli/tests/: archive.rs  board.rs  create.rs  create_template.rs  crystallize.rs  init.rs  list.rs  markdown_only_guards.rs  migrate.rs  regression.rs  search.rs  session.rs  spec_lifecycle.rs  stats.rs  tokens.rs  tui.rs  tui_e2e.rs  update.rs  validate.rs  view.rs
rust/leanspec-cli/tests/common/: mod.rs
rust/leanspec-cli/tests/fixtures/tui-sample/001-draft-spec/: README.md
rust/leanspec-cli/tests/fixtures/tui-sample/002-planned-spec/: README.md
rust/leanspec-cli/tests/fixtures/tui-sample/003-in-progress-spec/: README.md
rust/leanspec-cli/tests/fixtures/tui-sample/004-complete-spec/: README.md
rust/leanspec-cli/tests/fixtures/tui-sample/005-archived-spec/: README.md
rust/leanspec-cli/tests/fixtures/tui-sample/006-tui-feature/: README.md
rust/leanspec-cli/tests/fixtures/tui-sample/007-tui-testing/: README.md
rust/leanspec-cli/tests/fixtures/tui-sample/008-backend-api/: README.md
rust/leanspec-cli/tests/fixtures/tui-sample/009-database/: README.md
rust/leanspec-cli/tests/fixtures/tui-sample/010-auth/: README.md
rust/leanspec-core/: Cargo.toml
rust/leanspec-core/schemas/: adr.yaml  base.yaml  bug.yaml  feature.yaml
rust/leanspec-core/src/: error.rs  lib.rs  model.rs  relationships.rs  schema_registry.rs
rust/leanspec-core/src/adapters/: ado.rs  cache.rs  mod.rs  registry.rs  test_harness.rs
rust/leanspec-core/src/adapters/github/: mod.rs
rust/leanspec-core/src/adapters/jira/: adapter.rs  adf.rs  mod.rs
rust/leanspec-core/src/adapters/markdown/: archiver.rs  content.rs  graph.rs  loader.rs  mod.rs  types.rs  writer.rs
rust/leanspec-core/src/compute/: insights.rs  mod.rs  stats.rs  tokens.rs
rust/leanspec-core/src/git/: clone_manager.rs  mod.rs  operations.rs  types.rs
rust/leanspec-core/src/io/: discovery.rs  hash.rs  mod.rs  templates.rs
rust/leanspec-core/src/parsers/: frontmatter.rs  mod.rs
rust/leanspec-core/src/search/: filters.rs  fuzzy.rs  mod.rs  query.rs  scorer.rs
rust/leanspec-core/src/storage/: config.rs  mod.rs  project_registry.rs
rust/leanspec-core/src/types/: config.rs  mod.rs  validation.rs
rust/leanspec-core/src/validators/: completion.rs  frontmatter.rs  line_count.rs  mod.rs  structure.rs  token_count.rs
rust/leanspec-http/: Cargo.toml
rust/leanspec-http/src/: adapter_resolution.rs  config.rs  error.rs  lib.rs  main.rs  project_registry.rs  routes.rs  state.rs  utils.rs  watcher.rs
rust/leanspec-http/src/handlers/: adapter.rs  capabilities.rs  events.rs  files.rs  git.rs  health.rs  local_projects.rs  mod.rs  projects.rs
rust/leanspec-http/src/handlers/specs/: compute.rs  helpers.rs  mod.rs  read.rs  write.rs
rust/leanspec-http/src/middleware/: auth.rs  mod.rs
rust/leanspec-http/src/types/: common.rs  mod.rs  specs.rs
rust/leanspec-http/tests/: deps_test.rs  error_handling_test.rs  export_bindings.rs  projects_test.rs  scenarios_test.rs  schema_test.rs  search_test.rs  server_integration_test.rs  specs_test.rs  stats_test.rs  validate_test.rs
rust/leanspec-http/tests/common/: fixtures.rs  helpers.rs  mod.rs
rust/leanspec-mcp/: Cargo.toml
rust/leanspec-mcp/src/: error.rs  lib.rs  main.rs  protocol.rs  schema_to_input.rs  state.rs
rust/leanspec-mcp/src/tools/: create_spec.rs  doc.rs  get_capabilities.rs  get_schema.rs  get_spec.rs  list_specs.rs  markdown_only.rs  mod.rs  reload_schema.rs  search_specs.rs  update_spec.rs
rust/leanspec-mcp/tests/: integration.rs
rust/npm-dist/: binary-wrapper.js  mcp-wrapper.js  package.json.example
schemas/: runners.json
scripts/: add-platform-deps.ts  bump-dev-version.ts  copy-platform-binaries.sh  copy-rust-binaries.mjs  generate-platform-manifests.ts  migrate-specs-manifest.executed.json  migrate-specs-manifest.json  migrate-specs-to-issues.ts  prepare-publish.ts  publish-main-packages.ts  publish-platform-packages.ts  restore-packages.ts  stop-leanspec-processes.sh  sync-rust-versions.ts  sync-versions.ts  validate-no-workspace-protocol.ts  validate-platform-binaries.ts  verify-npm-packages.mjs  verify-npm-publish.ts
specs/: FROZEN.md
(+528 files in other folders)
